feat(ui): add captured pieces display with material advantage

--- a/frontend/static/scss/style.scss
+++ b/frontend/static/scss/style.scss
@@ -15,6 +15,9 @@
 /* 5. CHESSBOARD & EVALUATION BAR */
 @import 'partials/chessboard';
 
+/* 5.5. CAPTURED PIECES DISPLAY */
+@import 'partials/captured_pieces';
+
 /* 6. CONTROL BUTTONS */
 @import 'partials/buttons';
 
