--- a/frontend/static/scss/partials/_buttons.scss
+++ b/frontend/static/scss/partials/_buttons.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     gap: var(--gap-xs);
     padding: 0 var(--padding-xxs);
-    margin-top: var(--space-lg2);
+    margin-top: 12px;
 }
 
 .button-group-container .btn {
